[project]
name = "diffusion"
version = "0.0.1"
description = "TODO: description."
authors = [{ name = "Aurelio Amerio", email = "aure.amerio@gmail.com" }]
license = "LICENSE"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "jax>=0.4.38",
    "matplotlib>=3.10",
    "numpy>=2.1",
    "flax>=0.6.0",
    "diffrax>=0.6.0",
    "numpyro>=0.16.0",
    "tqdm>=4.62.0",
]

[project.urls]
Homepage = "https://github.com/aurelio-amerio/diffusers"
Issues = "https://github.com/aurelio-amerio/diffusers/issues"

[project.optional-dependencies]
cuda = ["jax[cuda]"]
tpu = ["jax[tpu]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
